runtime/tests/cases/variables/errors/assignment_typo.bobbin
temp greeting = "Hello"
set greting = "Goodbye"
